vector intersection